--- a/PointOfSalesSystem/Views/Shared/_Layout.cshtml
+++ b/PointOfSalesSystem/Views/Shared/_Layout.cshtml
@@ -379,5 +379,6 @@
     <script src="~/Asset/vendor/metisMenu/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="~/Asset/dist/js/sb-admin-2.js"></script>
+    @RenderSection("scripts",false);
 </body>
 </html>
